# JPM

./: .gitignore  Dockerfile  README.md  Usage_Examples.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  validation-weekly.yml
docs/: OVERVIEW.md  WORKFLOW.md
docs/colab/: QUICK_REFERENCE_COLAB.md
examples/: AI_Investment_Assistant.py
notebooks/: demo.ipynb
scripts/: run_demo.py  run_validation.py
src/ai_investment_assistant/: __init__.py  assistant.py  audit.py  backtest.py  compare.py  config.py  data_fetcher.py  explain.py  macro.py  ml_model.py  monitor.py  news_sentiment.py  preprocess.py  retrain.py  risk.py  signals.py  technicals.py  validation.py  visualize.py
src/ai_investment_assistant_app/: __init__.py  ai_insights.py  backtest.py  data_loader.py  fx.py  indicators.py  portfolio.py  signals.py  ui_pages.py  utils.py  validate.py
src/ai_investment_assistant_governed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_assistant.py  test_audit.py  test_backtest.py  test_basic.py  test_compare.py  test_data_fetcher.py  test_risk.py  test_signals.py  test_technicals.py  test_validation.py
